--- a/index.html
+++ b/index.html
@@ -15,21 +15,6 @@
 <!--    <script>alert("This is another silly alert");</script>-->
   </head>
   <body>
-    <h1>About</h1>
-    <p>
-      A curated list of product management advice from frameworks, interviews, experts, resources, books, products,
-      career preps, and much more.
-
-      The list is divided into cores such as product management, resources, interviews, case Studies, sample products/projects,
-      communities, open source projects, free and paid services. There is no pre-established order of items in each
-      category, the order is for contribution.
-
-      This list was created for all product managers whether beginner or advanced to learn from the best people and
-      communities. If you are a technical person looking to get into the role of a Product Manager, this advice below
-      will help you along your path. This guide is by all means not the end all to your learning as the best learning is
-      achieved through practice.
-    </p>
+    <h1>Launching Soon</h1>
   </body>
-
-
 </html>
