--- a/index.html
+++ b/index.html
@@ -24,21 +24,17 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-    <div style="background-image: url('img/paris.jpg')" class="main"> 
+    <div style="background-image: url('img/paris.jpg')" class="main">
       <div class="overlay"></div>
       <div class="container">
-        <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a></p>
-        <h1 class="cursive">Beautiful comming soon template</h1>
-        <h2 class="sub">You can expect this beautiful website running soon. </h2>
+        <!-- <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a></p> -->
+        <h1 class="cursive">Open Product Management</h1>
+        <h2 class="sub">A curated list of product management advice from frameworks, interviews, experts, resources, books, products, career preps, and much more. Inspired By Nicholas Ivanecky's Open Product Management Project On Github</h2>
         <div class="mailing-list">
           <h3 class="mailing-list-heading">Join our mailing list and we will notify you once it is ready!</h3>
           <div class="row">
             <form class="form-inline">
-              <div class="form-group">
-                <label for="email" class="sr-only"></label>
-                <input type="email" placeholder="jane.doe@example.com" id="email" class="form-control transparent">
-              </div>
-              <button class="btn btn-danger">subscribe </button>
+              <button class="btn btn-danger"><a href="https://kapoorcs1.typeform.com/to/D2hQG9">subscribe</a></button>
             </form>
           </div>
         </div>
@@ -47,10 +43,9 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy;2015 Your name/company goes here</p>
+              <p>&copy;2015 OpenProductManagement.com</p>
             </div>
             <div class="col-md-6">
-              <p class="credit">Made by <a href="http://bootstrapious.com">Bootstrapious</a><br />with support from <a href="https://kakusei.cz">Kakusei</a></p>
             </div>
           </div>
         </div>
