--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h3 class="mailing-list-heading">Join our mailing list and we will notify you once it is ready!</h3>
           <div class="row">
             <form class="form-inline">
-              <button class="btn btn-danger"><a href="https://kapoorcs1.typeform.com/to/D2hQG9">subscribe</a></button>
+              <button class="btn btn-danger"><a href="https://kapoorcs1.typeform.com/to/D2hQG9" target="_blank">subscribe</a></button>
             </form>
           </div>
         </div>
