--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
       <div class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12" style="text-align: center">
               <p>&copy;2015 OpenProductManagement.com</p>
-            </div>
-            <div class="col-md-6">
             </div>
           </div>
         </div>
