--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container">
         <!-- <p class="social"><a href="#" title="" class="facebook"><i class="fa fa-facebook"></i></a><a href="#" title="" class="twitter"><i class="fa fa-twitter"></i></a><a href="#" title="" class="gplus"><i class="fa fa-google-plus"></i></a><a href="#" title="" class="instagram"><i class="fa fa-instagram"></i></a></p> -->
         <h1 class="cursive">Open Product Management</h1>
-        <h2 class="sub">A curated list of product management advice from frameworks, interviews, experts, resources, books, products, career preps, and much more. Inspired By Nicholas Ivanecky's Open Product Management Project On Github</h2>
+        <h2 class="sub">A curated list of product management advice from frameworks, interviews, experts, resources, books, products, career preps, and much more. Inspired By <span style="color: #D9534F"><strong>Nicholas Ivanecky</strong></span></h2>
       </div>
       <div class="footer">
         <div class="container">
