--- a/reallifeproductmanagement.html
+++ b/reallifeproductmanagement.html
@@ -16,7 +16,7 @@
 		<header class="row">
 			<div class="col-sm-4 logo">
                 <a style="text-decoration: none" href="index.html"><h4 style="font-family: sans-serif;color: rgb(255,90,95);">OpenProductManagement</h4>
-                    <p style="color:#c4c4c4;margin-left: 30px;margin-bottom: 20px"><i>Inspired by Nicholas Ivanecky</i></p></a>
+                   <a href=" https://www.linkedin.com/in/nicholasivanecky" style="text-decoration: none" target="_blank"><p style="color:#c4c4c4;margin-bottom: 20px"><i>Inspired by Nicholas Ivanecky</i></p></a>
       </div><!--logo-->
     </header>
 
