--- a/resource.html
+++ b/resource.html
@@ -34,7 +34,7 @@
     </div><!--row-->
     <br><br>
        <ol class="breadcrumb" style="background: white;margin-top: -40px;margin-left: -27px;margin-bottom: -20px">
-	 <li><a href="index.html" style="text-decoration: none;color: red">Home</a></li>
+	 <li><a href="index.html" style="text-decoration: none;color: rgb(255,90,95)">Home</a></li>
   
 	 <li class="active">Resources</li>
       </ol>
