--- a/getthejob.html
+++ b/getthejob.html
@@ -33,6 +33,12 @@
 		  </div><!--col-md-12-->
     </div><!--row-->
     <br><br>
+    <ol class="breadcrumb" style="background: white;margin-top: -40px;margin-left: -27px;margin-bottom: -20px">
+  <li><a href="index.html" style="text-decoration: none;color: rgb(255,90,95)">Home</a></li>
+  
+  <li class="active">Get The Job</li>
+</ol>
+        <br>
 
     <div class="row">
      <div class="bs">
