--- a/productmanagers.html
+++ b/productmanagers.html
@@ -22,7 +22,7 @@
 
     <div class="row">
 			<div class="col-lg-12">
-        <div class="item" style="border: 5px solid white;height: 300px;background: -webkit-linear-gradient(left,rgba(255,90,95,1),rgba(255,90,95,.6));background: -moz-linear-gradient(bottom,rgba(255,90,95,1),rgba(255,90,95,.7))">
+        <div class="item" style="height: 300px;background: -webkit-linear-gradient(left,rgba(255,90,95,1),rgba(255,90,95,.6));background: -moz-linear-gradient(bottom,rgba(255,90,95,1),rgba(255,90,95,.7))">
            
             <div style="padding-top: 105px" class="carousel-caption">
               <h3 style="margin-top: -20px;text-transform: upper">Best Product Managers on Twitter</h3>
