--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="row first">
         <a style="text-decoration: none;color: lapis" href="productmanagement.html"><article style="width: 280px;color: white;height: 120px;margin-right: 12px;padding: 20px;padding-top:40px" class=".center-block service col-md-3 col-sm-6 col-xs-12">
-            <p style="text-align: center;color: rgb(255,90,95)"><b>PRODUCT MANAGEMENT</b></p>
+            <p style="text-align: center;color: rgb(255,90,95)"><b>PRODUCTS MANAGEMENT</b></p>
             </article></a>
 
         <a style="text-decoration: none;color:rgb(255,90,95)" href="resource.html"> <article style="width: 280px;height: 120px;margin-right: 12px;padding: 20px;padding-top:40px" class="service col-md-3 col-sm-6 col-xs-12">
