--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div style="padding-top: 105px" class="carousel-caption">
               <h3 style="margin-top: -20px;text-transform: upper">Open Product Management</h3>
-              <p>"A Product Manager's Welcome Packet To Life"</p>
+              <p>"A Product Manager's Welcome Packet 2 Life"</p>
             </div><!--carousel-caption-->
           </div><!--item-->
 
