--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="row">
 			<div class="col-lg-12">
-        <div class="item" style="height: 300px;background: -webkit-linear-gradient(left,rgba(255,90,95,1),rgba(255,90,95,.6));background: -moz-linear-gradient(bottom,rgba(255,90,95,1),rgba(255,90,95,.7))">
+        <div class="item" style="height: 300px">
           <iframe src="//cdn.bannersnack.com/banners/bxt5ejcc4/embed/index.html?userId=18671506&t=1480438046" width="1280" height="300" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
             <div style="padding-top: 105px" class="carousel-caption">
               <h3 style="margin-top: -20px;text-transform: upper">Open Product Management</h3>
