--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 			<div class="col-lg-12">
         <div class="item" style="height: 300px;width:1170px">
           <iframe src="//cdn.bannersnack.com/banners/bxt5ejcc4/embed/index.html?userId=18671506&t=1480438046" width="1280" height="300" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
-            <div style="padding-top: 105px" class="carousel-caption">
+            <!-- <div style="padding-top: 105px" class="carousel-caption">
               <h3 style="margin-top: -20px;text-transform: upper">Open Product Management</h3>
               <p>"A Product Manager's Welcome Packet to Life"</p>
-            </div><!--carousel-caption-->
+            </div><!--carousel-caption--> -->
         </div><!--item-->
 
 		  </div><!--col-md-12-->
