--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- <div style="padding-top: 105px" class="carousel-caption">
               <h3 style="margin-top: -20px;text-transform: upper">Open Product Management</h3>
               <p>"A Product Manager's Welcome Packet to Life"</p>
-            </div><!--carousel-caption--> -->
+            </div><!--carousel-caption-->
         </div><!--item-->
 
 		  </div><!--col-md-12-->
