--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="row">
   <div class="col-lg-12">
        <hr style="border-style:dashed; margin-bottom: -170px;margin-top:80px;width: 20%;border-color: rgb(255,90,95) " class="dotted">
-      <p style="text-align: center;padding-top: -50px;margin-top: 180px;color: #c6c6c6">Curated with <i style="color:rgb(255,90,95)" class="fa fa-heart"></i> By Shivani</p><br>
+      <p style="text-align: center;padding-top: -50px;margin-top: 180px;color: #c6c6c6">Curated with <i style="color:rgb(255,90,95)" class="fa fa-heart"></i> By Shivani Narang</p><br>
       <hr style="border-style:dashed;margin-top: -30px;width: 20%;border-color: rgb(255,90,95) " class="dotted">
   </div>
 </div>
